--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.jooq</groupId>
+            <artifactId>jooq</artifactId>
+        </dependency>
+
+
 
     </dependencies>
 
